flux/base/laravel-cms/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: hannyprastya
  labels:
    app: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
